# pii_project

./: README.md  pyproject.toml
docs/: pii_methodology.md
src/kpii/: __init__.py  config.py  models.py  pipeline.py
src/kpii/detectors/: base.py  llm_detector.py  regex_detector.py
src/kpii/llm/: base.py  openai_client.py  prompts.py
src/kpii/patterns/: korean.py
src/kpii/processors/: base.py  generalizer.py  masker.py
src/kpii/utils/: logging.py  validators.py
tests/: conftest.py  test_generalizer.py  test_llm_detector.py  test_masker.py  test_patterns_korean.py  test_pipeline.py  test_regex_detector.py
