[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kpii"
version = "0.1.0"
description = "한국어 PII 탐지 및 비식별화 패키지 (쇼핑몰 AI 대화용)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kpii"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
